@startuml
!theme crt-green
skinparam linetype ortho

entity Usuario {
    * username: varchar
    * password: varchar
}

entity Sesion {
    * token: varchar
    --
		* username: varchar
    * created: timestamp
}

entity Contacto_Emergencia {
    * id_contacto: serial <<generated>>
    --
    * nombre: varchar
    * parentesco: varchar
    * telefono: varchar
}

entity Paciente {
    * carnet: varchar
    --
    * es_estudiante: boolean
    * nombres: varchar
    * apellidos: varchar
    * sexo: char
    * correo: varchar
    * telefono: varchar
    * seguro: varchar
    * carrera_o_dept: varchar
    * fecha_nacimiento: date
    * tipo_sangre: varchar
    * direccion: varchar
    * nota_importante: text
    * contacto_emergencia_1: serial <<FK>>
    contacto_emergencia_2: serial <<FK>>
}

entity Antecedente_Paciente {
	* id_antecedente_paciente: serial <<generated>>
	* paciente: serial <<FK>>
	* antecedente: serial <<FK>>
	--
	* fecha_inicio: date
}

entity Antecedente {
	* id_antecedente: serial <<generated>>
	--
	* tipo: serial <<FK>>
	* descripcion: varchar
}

entity Tipo_Antecedente {
    * id_tipo: serial <<generated>>
    --
    * descripcion: varchar
}

entity Tratamiento {
    * id_tratamiento: serial <<generated>>
    --
    * descripcion: varchar
}

entity Tratamiento_Antecedente {
	* antecedente_paciente: serial <<FK>>
	* tratamiento: serial <<FK>>
	--
	detalle_farmacologia: serial <<FK>>
}

entity Detalle_Farmacologia {
    * id_detalle_farmacologia: serial <<generated>>
    --
    * dosis: double precision
    * unidad_dosis: varchar
    * frecuencia_dosis: integer
}

entity Tratamiento_Visita {
    * visita: serial <<FK>>
    * tratamiento: serial <<FK>>
    --
    detalle_farmacologia: serial <<FK>>
}

entity Visita {
    * id_visita: serial <<generated>>
    --
    * paciente: serial <<FK>>
    * motivo: varchar
    * fecha: timestamp
    * diagnostico: text
    * referencia: text
    examen_fisico: serial <<FK>>
}

entity Examen_Fisico {
    * id_examen_fisico: serial <<generated>>
    --
    * descripcion: varchar
    * frecuencia_respiratoria: integer
    * temperatura: double precision
    * saturacion_oxigeno: integer
    * glucometria: integer
    * frecuencia_cardiaca: integer
    * presion_arterial: integer
}

entity Formulario {
    * id_formulario: serial <<generated>>
    --
    * edicion: varchar
    * fecha: timestamp
}

entity Respuesta_Formulario {
    * formulario: serial <<FK>>
    * paciente: serial <<FK>>
    --
    * fecha: timestamp
}

Usuario ||--o{ Sesion

Paciente ||--o{ Antecedente_Paciente
Paciente ||--|| Contacto_Emergencia
Paciente ||--o| Contacto_Emergencia

Paciente ||--o{ Visita
Visita ||--o| Examen_Fisico

Paciente ||--|{ Respuesta_Formulario
Formulario ||--|{ Respuesta_Formulario

Antecedente_Paciente }|--|| Antecedente

Visita ||--o{ Tratamiento_Visita
Tratamiento ||--o{ Tratamiento_Visita

Tratamiento ||--o{ Tratamiento_Antecedente
Tratamiento_Antecedente }o--|| Antecedente_Paciente

Detalle_Farmacologia |o--|| Tratamiento_Visita
Detalle_Farmacologia |o--|| Tratamiento_Antecedente

Antecedente }o--||  Tipo_Antecedente


note left of Usuario::password
This field must only 
contain hashed passwords
end note
@enduml
